[gd_scene load_steps=24 format=3 uid="uid://cn1gdwiythfn2"]

[ext_resource type="Script" uid="uid://dvbwyukos638c" path="res://game/demo.gd" id="1_5nuje"]
[ext_resource type="Texture2D" uid="uid://blljslsxyx8em" path="res://assets/tile.png" id="2_43tmy"]
[ext_resource type="DojoCall" uid="uid://dv2i1mr6kuwoh" path="res://resources/calls/spawn_call.tres" id="2_k3cyb"]
[ext_resource type="Script" uid="uid://c63vfoblqmxxg" path="res://tools/controllers.gd" id="3_k3cyb"]
[ext_resource type="DojoCall" uid="uid://cgu5bg3mm37rw" path="res://resources/calls/reset_spawn_call.tres" id="3_p8iq3"]
[ext_resource type="Texture2D" uid="uid://bls0ryaavsbvd" path="res://assets/arrow_left.png" id="4_p8iq3"]
[ext_resource type="DojoCall" uid="uid://dv3gp8eh77oho" path="res://resources/calls/move_call.tres" id="4_w8h56"]
[ext_resource type="Texture2D" uid="uid://bqdfqrx7ajogy" path="res://assets/arrow_left_p.png" id="5_2tan0"]
[ext_resource type="DojoCall" uid="uid://cxtt744f5nyle" path="res://resources/calls/move_to_call.tres" id="5_r5x6q"]
[ext_resource type="PackedScene" uid="uid://dj5mxqnlsh6q7" path="res://entities/generic/generic.tscn" id="6_2tan0"]
[ext_resource type="PackedScene" uid="uid://b75yggsnay1mo" path="res://connection/connection.tscn" id="6_3jxqj"]
[ext_resource type="Texture2D" uid="uid://do4cgyej57yhs" path="res://assets/arrow_up.png" id="6_w8h56"]
[ext_resource type="Texture2D" uid="uid://d1cuwkkgp8hyv" path="res://assets/arrow_up_p.png" id="7_r5x6q"]
[ext_resource type="PackedScene" uid="uid://vjy23l7u4hch" path="res://entities/player/player.tscn" id="7_w8h56"]
[ext_resource type="Texture2D" uid="uid://dkh2t0psfn40h" path="res://assets/arrow_down.png" id="8_3jxqj"]
[ext_resource type="Texture2D" uid="uid://bkiqp5xd7g5mf" path="res://assets/arrow_down_p.png" id="9_yxvbm"]
[ext_resource type="Texture2D" uid="uid://44dwfojqqvam" path="res://assets/arrow_right.png" id="10_qlbmn"]
[ext_resource type="Texture2D" uid="uid://dn0lmukjhns5l" path="res://assets/arrow_right_p.png" id="11_0joe1"]
[ext_resource type="PackedScene" uid="uid://d1loujwy6tlp4" path="res://ui/screens/start_screen.tscn" id="12_s1sno"]

[sub_resource type="DojoCall" id="DojoCall_r5x6q"]
to = "0x065d58039c71b4a0fe302d68f9fad4bf49e01fe518d7912d44ba0d07b2d7f556"
selector = "move_to_signed"

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mhvfb"]
color = Color(0.984564, 0.288109, 0.364559, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5x6q"]
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3cyb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.2484, 0.2484, 0.2484, 1)

[node name="DemoGame" type="Node" node_paths=PackedStringArray("connection")]
script = ExtResource("1_5nuje")
spawn_call = ExtResource("2_k3cyb")
spawn_reset_call = ExtResource("3_p8iq3")
move_call = ExtResource("4_w8h56")
move_to = ExtResource("5_r5x6q")
move_to_signed = SubResource("DojoCall_r5x6q")
connection = NodePath("Connection")

[node name="Connection" parent="." instance=ExtResource("6_3jxqj")]

[node name="Parallax" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallax"]

[node name="Parallax2D" type="Parallax2D" parent="Parallax/ParallaxLayer"]
repeat_size = Vector2(1024, 1024)
repeat_times = 128

[node name="Bg" type="Sprite2D" parent="Parallax/ParallaxLayer/Parallax2D"]
texture_filter = 1
texture_repeat = 2
texture = ExtResource("2_43tmy")
centered = false
offset = Vector2(32, 32)
region_enabled = true
region_rect = Rect2(0, 0, 1024, 1024)

[node name="World" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ControllersManager" type="Node2D" parent="World"]
unique_name_in_owner = true
script = ExtResource("3_k3cyb")
generic_entity_scene = ExtResource("6_2tan0")
player_entity_scene = ExtResource("7_w8h56")

[node name="Camera2D" type="Camera2D" parent="World"]
position_smoothing_enabled = true
position_smoothing_speed = 4.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Menu" type="HBoxContainer" parent="UI/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="ButtonToggle" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
toggle_mode = true
text = "="

[node name="Tabs" type="TabContainer" parent="UI/VBoxContainer/HSplitContainer/Menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
tab_alignment = 1
current_tab = 1
use_hidden_tabs_for_min_size = true

[node name="Main" type="VBoxContainer" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
metadata/_tab_index = 0

[node name="WorldClientLabel" type="Label" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/Main"]
layout_mode = 2
text = "World Client"
horizontal_alignment = 1

[node name="StartToriiClient" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/Main"]
unique_name_in_owner = true
layout_mode = 2
text = "Connect Client"

[node name="ConnectController" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/Main"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Login"

[node name="Disconnect" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/Main"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Disconnect"

[node name="TestMenu" type="ScrollContainer" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs"]
layout_mode = 2
follow_focus = true
metadata/_tab_index = 1

[node name="Test" type="VBoxContainer" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label2" type="Label" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
layout_mode = 2
text = "Tests"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreateSubscriptions" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
layout_mode = 2
text = "Create Subscriptions"

[node name="GetControllers" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Get Controllers"

[node name="GetEntities" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Get Entities"

[node name="GetWorldMetadata" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Get World Metadata"

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_mhvfb")

[node name="Label" type="Label" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
layout_mode = 2
text = "Actions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
layout_mode = 2

[node name="ResetSpawn" type="CheckBox" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Reset"

[node name="Spawn" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "SPAWN"

[node name="SpawnRaw" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "SPAWN Raw"

[node name="Move" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "MOVE"

[node name="TESTING" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "TESTING"

[node name="SetupPolicies" type="Button" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/TestMenu/Test"]
unique_name_in_owner = true
layout_mode = 2
text = "SetupPolicies
"

[node name="Chat" type="VBoxContainer" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs"]
visible = false
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/Chat"]
layout_mode = 2
text = "-WIP- "
horizontal_alignment = 1

[node name="ChatBox" type="TextEdit" parent="UI/VBoxContainer/HSplitContainer/Menu/Tabs/Chat"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Arrows" type="MarginContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 132.0
grow_horizontal = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Arrows"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Arrows/VBoxContainer"]
texture_filter = 1
layout_mode = 2
alignment = 1

[node name="ArrowLeft" type="TextureButton" parent="UI/Arrows/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 12
texture_normal = ExtResource("4_p8iq3")
texture_pressed = ExtResource("5_2tan0")
texture_hover = ExtResource("4_p8iq3")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Arrows/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ArrowUp" type="TextureButton" parent="UI/Arrows/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_w8h56")
texture_pressed = ExtResource("7_r5x6q")
texture_hover = ExtResource("6_w8h56")

[node name="ArrowDown" type="TextureButton" parent="UI/Arrows/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_3jxqj")
texture_pressed = ExtResource("9_yxvbm")
texture_hover = ExtResource("8_3jxqj")

[node name="ArrowRight" type="TextureButton" parent="UI/Arrows/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 12
texture_normal = ExtResource("10_qlbmn")
texture_pressed = ExtResource("11_0joe1")
texture_hover = ExtResource("10_qlbmn")

[node name="PanelContainer" type="PanelContainer" parent="UI/Arrows/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Arrows/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label" type="Label" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Amount"

[node name="StepsAmount" type="SpinBox" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
rounded = true
allow_greater = true

[node name="HSeparator" type="HSeparator" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_r5x6q")

[node name="PanelContainer" type="PanelContainer" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Vx" type="SpinBox" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
rounded = true
allow_greater = true
allow_lesser = true

[node name="Vy" type="SpinBox" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
rounded = true
allow_greater = true
allow_lesser = true

[node name="VSeparator" type="VSeparator" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_r5x6q")

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoveTo" type="Button" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move"

[node name="MoveToSigned" type="Button" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Sig"

[node name="HSeparator2" type="HSeparator" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_r5x6q")

[node name="Tokens" type="Button" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Tokens"

[node name="ControllerBtn" type="TextEdit" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "0x0"

[node name="HSeparator3" type="HSeparator" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_r5x6q")

[node name="GetController" type="Button" parent="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Get Controller"

[node name="Panel" type="PanelContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_right = 125.0
offset_bottom = 39.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_k3cyb")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel"]
layout_mode = 2

[node name="LabelUsername" type="Label" parent="UI/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Username:"

[node name="LabelAddress" type="Label" parent="UI/Panel/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Username:"

[node name="LabelMoves" type="Label" parent="UI/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Moves:"

[node name="Disconnect" type="Button" parent="UI/Panel/HBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="StartScreen" parent="UI" node_paths=PackedStringArray("connection") instance=ExtResource("12_s1sno")]
visible = false
connection = NodePath("../../Connection")

[connection signal="pressed" from="UI/Arrows/VBoxContainer/HBoxContainer/ArrowLeft" to="." method="_on_arrow_left_pressed"]
[connection signal="pressed" from="UI/Arrows/VBoxContainer/HBoxContainer/VBoxContainer/ArrowUp" to="." method="_on_arrow_up_pressed"]
[connection signal="pressed" from="UI/Arrows/VBoxContainer/HBoxContainer/VBoxContainer/ArrowDown" to="." method="_on_arrow_down_pressed"]
[connection signal="pressed" from="UI/Arrows/VBoxContainer/HBoxContainer/ArrowRight" to="." method="_on_arrow_right_pressed"]
[connection signal="pressed" from="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer2/MoveTo" to="." method="_on_move_to_pressed"]
[connection signal="pressed" from="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer2/MoveToSigned" to="." method="_on_move_to_signed_pressed"]
[connection signal="pressed" from="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/Tokens" to="." method="_on_tokens_pressed"]
[connection signal="pressed" from="UI/Arrows/VBoxContainer/PanelContainer/VBoxContainer/GetController" to="." method="_on_get_controller_pressed"]
[connection signal="pressed" from="UI/Panel/HBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="entered" from="UI/StartScreen" to="." method="_on_start_screen_entered"]
